--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,13 +2,13 @@
 
 <div class="grid-container">
 
-    <div class="grid-item" style="grid-column: 1 / 4;">
+    <div class="grid-item grid-column-4">
 
         <h1><i class="fad fa-surprise fa-sm fa-fw"></i> <br> Pop That News Bubble</h1>
 
     </div>
 
-    <div class="grid-item" style="background: #393e47;">
+    <div class="grid-item grid-column-1" style="background: #393e47;">
 
         <h3><i class="fad fa-newspaper fa-fw"></i> The Powerhouses</h3>
 
@@ -47,7 +47,7 @@
         
     </div>
 
-    <div class="grid-item">
+    <div class="grid-item grid-column-2">
 
         <h3><i class="fad fa-user-secret fa-fw"></i> The Journalists</h3>
 
@@ -55,36 +55,32 @@
             <li>
                 <i class="fad fa-typewriter fa-sm fa-fw"></i>
                 <a href="https://www.dailyposter.com/">
-                    <strong>The Daily Poster</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">David Sirota</span>
+                    <strong>The Daily Poster</strong> · <span>David Sirota</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-dog fa-sm fa-fw"></i>
                 <a href="https://greenwald.substack.com/">
-                    <strong>Glenn Greenwald Substack</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Glenn Greenwald</span>
+                    <strong>Glenn Greenwald Substack</strong> · <span>Glenn Greenwald</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-splotch fa-sm fa-fw"></i>
                 <a href="https://the.ink/">
-                    <strong>The Ink</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Anand Giridharadas</span>
+                    <strong>The Ink</strong> · <span>Anand Giridharadas</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-fist-raised fa-sm fa-fw"></i>
                 <a href="https://www.bostonglobe.com/opinion/the-emancipator/">
-                    <strong>The Emancipator</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Ibram X. Kendi</span>
+                    <strong>The Emancipator</strong> · <span>Ibram X. Kendi</span>
                 </a>
             </li>
         </ul>
         
     </div>
 
-    <div class="grid-item">
+    <div class="grid-item grid-column-1">
 
         <h3><i class="fad fa-viruses fa-fw"></i> COVID Stuff</h3>
 
@@ -117,7 +113,7 @@
         
     </div>
 
-    <div class="grid-item" style="background: #393e47;">
+    <div class="grid-item grid-column-2" style="background: #393e47;">
 
         <h3><i class="fad fa-microphone-alt fa-fw"></i> Podcasts</h3>
 
@@ -125,65 +121,44 @@
             <li>
                 <i class="fad fa-cross fa-rotate-180 fa-sm fa-fw"></i>
                 <a href="https://www.patreon.com/badfaithpodcast">
-                    <strong>Bad Faith</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Briahna Joy Gray & Virgil Texas</span>
+                    <strong>Bad Faith</strong> · <span>Briahna Joy Gray & Virgil Texas</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-traffic-light-stop fa-sm fa-fw"></i>
                 <a href="https://lady-dont-take-no.simplecast.com/">
-                    <strong>Lady Don't Take No</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Alicia Garza</span>
+                    <strong>Lady Don't Take No</strong> · <span>Alicia Garza</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-lasso fa-sm fa-fw"></i>
                 <a href="https://podcasts.apple.com/us/podcast/the-tight-rope/id1524242837">
-                    <strong>The Tight Rope</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Dr. Cornell West & Professor Tricia Rose </span>
+                    <strong>The Tight Rope</strong> · <span>Dr. Cornell West & Professor Tricia Rose </span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-landmark-alt fa-sm fa-fw"></i>
                 <a href="https://congressionaldish.com/">
-                    <strong>Congressional Dish</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Jen Briney</span>
+                    <strong>Congressional Dish</strong> · <span>Jen Briney</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-satellite fa-sm fa-fw"></i>
                 <a href="https://theintercept.com/podcasts/intercepted/">
-                    <strong>Intercepted</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Jeremy Scahill</span>
+                    <strong>Intercepted</strong> · <span>Jeremy Scahill</span>
                 </a>
             </li>
             <li>
                 <i class="fad fa-space-station-moon-alt fa-sm fa-fw"></i>
                 <a href="https://theintercept.com/podcasts/deconstructed/">
-                    <strong>Deconstructed</strong><br>
-                    <span style="padding-left: 1.85em; font-size: .8em">Ryan Grim</span>
+                    <strong>Deconstructed</strong> · <span>Ryan Grim</span>
                 </a>
             </li>
         </ul>
 
     </div>
 
-    <div class="grid-item">
-
-        <h3><i class="fad fa-hands-helping fa-fw"></i> Anarchism</h3>
-
-        <ul>
-            <li>
-                <i class="fad fa-books fa-rotate-180 fa-sm fa-fw"></i>
-                <a href="https://theanarchistlibrary.org/special/index">
-                    The Anarchist Library
-                </a>
-            </li>
-        </ul>
-        
-    </div>
-
-    <div class="grid-item" style="background: #393e47;">
+    <div class="grid-item grid-column-1" style="background: #393e47;">
 
         <h3><i class="fad fa-grin-squint-tears fa-fw"></i> Fun</h3>
 
@@ -222,7 +197,41 @@
 
     </div>
 
-    <div class="grid-item" style="grid-column: 1 / 4;">
+    <div class="grid-item grid-column-2">
+
+        <h3><i class="fad fa-hands-helping fa-fw"></i> Anarchism</h3>
+
+        <ul>
+            <li>
+                <i class="fad fa-comment-lines fa-sm fa-fw"></i>
+                <a href="https://theconversation.com/what-is-anarchism-all-about-50373">
+                    <strong>Get it straight #1:</strong> <span>What is anarchism all about?</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-hands-heart fa-sm fa-fw"></i>
+                <a href="https://www.teenvogue.com/story/anarchy-explained-what-it-is-why-pop-culture-loves-it">
+                    <strong>Get it straight #2:</strong> <span>Anarchy: What It Is and Why Pop Culture Loves It</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-newspaper fa-sm fa-fw"></i>
+                <a href="https://www.washingtonpost.com/outlook/2020/06/04/stop-blaming-everything-bad-anarchists/">
+                    <strong>Get it straight #3:</strong> <span>Stop blaming everything bad on anarchists</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-books fa-sm fa-fw"></i>
+                <a href="https://theanarchistlibrary.org/special/index">
+                    <strong>Now go read!:</strong> <span>The Anarchist Library</span>
+                </a>
+            </li>
+        </ul>
+        
+    </div>
+
+
+    <div class="grid-item grid-column-3" style="grid-column: 1 / 4;">
 
         <h3><i class="fad fa-rss fa-fw"></i> Headlines: DN! · ProPublica</h3>
     
