--- a/src/css/main.css
+++ b/src/css/main.css
@@ -53,15 +53,41 @@ a {
   padding: 1em;
 }
 
+.grid-column-1,
+.grid-column-2,
+.grid-column-3,
+.grid-column-4 {
+  grid-area: span 1;
+}
+
 @media only screen and (min-width: 500px) and (max-width: 799px) {
   .grid-container {
     grid-template-columns: auto auto;
   }
+  .grid-column-1,
+  .grid-column-2 {
+    grid-area: span 1;
+  }
+  .grid-column-3,
+  .grid-column-4 {
+    grid-area: span 2;
+  }
+
 }
 
 @media only screen and (min-width: 800px) {
   .grid-container {
     grid-template-columns: auto auto auto;
+  }
+  .grid-column-1 {
+    grid-area: span 1;
+  }
+  .grid-column-2 {
+    grid-area: span 2;
+  }
+  .grid-column-3,
+  .grid-column-4 {
+    grid-area: span 3;
   }
 }
 
