--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -231,7 +231,7 @@
     </div>
 
 
-    <div class="grid-item grid-column-3" style="grid-column: 1 / 4;">
+    <div class="grid-item grid-column-4">
 
         <h3><i class="fad fa-rss fa-fw"></i> Headlines: DN! · ProPublica</h3>
     
