--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,7 +57,7 @@ a {
 .grid-column-2,
 .grid-column-3,
 .grid-column-4 {
-  grid-area: span 1;
+  grid-area: auto / span 1;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 799px) {
@@ -66,11 +66,11 @@ a {
   }
   .grid-column-1,
   .grid-column-2 {
-    grid-area: span 1;
+    grid-area: auto / span 1;
   }
   .grid-column-3,
   .grid-column-4 {
-    grid-area: span 2;
+    grid-area: auto / span 2;
   }
 
 }
@@ -80,14 +80,14 @@ a {
     grid-template-columns: auto auto auto;
   }
   .grid-column-1 {
-    grid-area: span 1;
+    grid-area: auto / span 1;
   }
   .grid-column-2 {
-    grid-area: span 2;
+    grid-area: auto / span 2;
   }
   .grid-column-3,
   .grid-column-4 {
-    grid-area: span 3;
+    grid-area: auto / span 3;
   }
 }
 
