--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -243,7 +243,7 @@
             rssfeed_url[1]="http://feeds.propublica.org/propublica/main";  
             rssfeed_url[2]="https://theanarchistlibrary.org/feed";
             rssfeed_frame_width="100%"; 
-            rssfeed_frame_height="fit-content"; 
+            rssfeed_frame_height="1280"; 
             rssfeed_scroll="off"; 
             rssfeed_scroll_step="6"; 
             rssfeed_scroll_bar="on"; 
