--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -14,6 +14,10 @@
   <script src="https://kit.fontawesome.com/4f049b5392.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+  integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+  crossorigin="anonymous"></script>
 </head>
 
 <body>
