--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -49,7 +49,7 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-user-secret fa-fw"></i> The Journalists</h3>
+        <h3><i class="fad fa-user-secret fa-fw"></i> The Good Guys</h3>
 
         <ul>
             <li>
