--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,6 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,6 +47,7 @@ a {
 
 .grid-container {
   display: grid; 
+  height: 100%;
 }
 
 .grid-item {
