--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -233,7 +233,7 @@
 
     <div class="grid-item grid-column-4">
 
-        <h3><i class="fad fa-rss fa-fw"></i> Headlines: DN! · ProPublica</h3>
+        <h3><i class="fad fa-rss fa-fw"></i> Feed: DemocracyNow! · ProPublica · Anarchist Library</h3>
     
         <!-- start sw-rss-feed code --> 
         <script type="text/javascript"> 
