--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -8,7 +8,7 @@
 
     </div>
 
-    <div class="grid-item grid-column-1" style="background: #393e47;">
+    <div class="grid-item grid-column-1">
 
         <h3><i class="fad fa-newspaper fa-fw"></i> The Powerhouses</h3>
 
@@ -49,7 +49,7 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-user-secret fa-fw"></i> The Good Guys</h3>
+        <h3><i class="fad fa-user-secret fa-fw"></i> The Troublemakers</h3>
 
         <ul>
             <li>
@@ -82,9 +82,15 @@
 
     <div class="grid-item grid-column-1">
 
-        <h3><i class="fad fa-viruses fa-fw"></i> COVID Stuff</h3>
+        <h3><i class="fad fa-viruses fa-fw"></i> The SARS-CoV-2</h3>
 
         <ul>
+            <li>
+                <i class="fad fa-laptop-medical fa-sm fa-fw"></i>
+                <a href="https://pubmed.ncbi.nlm.nih.gov/?term=covid">
+                    PubMed "COVID"
+                </a>
+            </li>
             <li>
                 <i class="fad fa-sparkles fa-sm fa-fw"></i>
                 <a href="https://www.nature.com/articles/d41586-020-00502-w">
@@ -113,9 +119,9 @@
         
     </div>
 
-    <div class="grid-item grid-column-2" style="background: #393e47;">
+    <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-microphone-alt fa-fw"></i> Podcasts</h3>
+        <h3><i class="fad fa-microphone-alt fa-fw"></i> The Podcasts</h3>
 
         <ul>
             <li>
@@ -158,9 +164,9 @@
 
     </div>
 
-    <div class="grid-item grid-column-1" style="background: #393e47;">
+    <div class="grid-item grid-column-1">
 
-        <h3><i class="fad fa-grin-squint-tears fa-fw"></i> Fun</h3>
+        <h3><i class="fad fa-grin-squint-tears fa-fw"></i> The Ridiculousness</h3>
 
         <ul>
             <li>
@@ -199,7 +205,7 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-hands-helping fa-fw"></i> Anarchism</h3>
+        <h3><i class="fad fa-hands-helping fa-fw"></i> The Anarchists</h3>
 
         <ul>
             <li>
@@ -233,7 +239,7 @@
 
     <div class="grid-item grid-column-4">
 
-        <h3><i class="fad fa-rss fa-fw"></i> Feed: DemocracyNow! · ProPublica · Anarchist Library</h3>
+        <h3><i class="fad fa-rss fa-fw"></i> The Feed</h3>
     
         <!-- start sw-rss-feed code --> 
         <script type="text/javascript"> 
@@ -266,7 +272,7 @@
             rssfeed_item_bgcolor=""; 
             rssfeed_item_bgimage=""; 
             rssfeed_item_border_bottom="off"; 
-            rssfeed_item_source_icon="off"; 
+            rssfeed_item_source_icon="on"; 
             rssfeed_item_date="on"; 
             rssfeed_item_description="on"; 
             rssfeed_item_description_length="150"; 
