--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,7 +2,7 @@
 
 <div class="grid-container">
 
-    <div class="grid-item grid-column-4">
+    <div class="grid-item grid-column-4 no-bg">
 
         <h1><i class="fad fa-surprise fa-sm fa-fw"></i> <br> Pop That News Bubble</h1>
 
@@ -245,9 +245,9 @@
         <script type="text/javascript"> 
             <!-- 
             rssfeed_url = new Array(); 
-            rssfeed_url[0]="https://www.democracynow.org/democracynow.rss";  
-            rssfeed_url[1]="http://feeds.propublica.org/propublica/main";  
-            rssfeed_url[2]="https://theanarchistlibrary.org/feed";
+            rssfeed_url[0]='https://www.democracynow.org/democracynow.rss';  
+            rssfeed_url[1]='http://feeds.propublica.org/propublica/main';  
+            rssfeed_url[2]='https://theanarchistlibrary.org/feed';
             rssfeed_frame_width="100%"; 
             rssfeed_frame_height="1280"; 
             rssfeed_scroll="off"; 
