--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,7 +4,17 @@
 
     <div class="grid-item grid-column-4 no-bg">
 
-        <h1><i class="fad fa-surprise fa-sm fa-fw"></i> <br> Pop That News Bubble</h1>
+        <h1>
+            <span class="fa-layers fa-fw">
+                <i class="fad fa-star-exclamation fa-rotate-by" style="--fa-rotate-angle: 10deg;" data-fa-transform="shrink-4 up-10 right-10"></i>
+                <i class="fad fa-lightbulb-exclamation fa-rotate-by" style="--fa-rotate-angle: -10deg;" data-fa-transform="shrink-6 up-6 left-8"></i>
+                <i class="fad fa-exclamation" data-fa-transform="grow-4 up-6 left-2"></i>
+                <i class="fad fa-question" data-fa-transform="shrink-8 up-6 right-2"></i>
+                <i class="fad fa-bell-exclamation" data-fa-transform="shrink-2 up-8 left-4"></i>
+                <i class="fad fa-surprise fa-lg"></i>
+            </span><br>
+            Pop That News Bubble
+        </h1>
 
     </div>
 
@@ -267,7 +277,7 @@
             rssfeed_footer_bgcolor="#fff"; 
             rssfeed_footer_color="#333"; 
             rssfeed_footer_bgimage=""; 
-            rssfeed_item_title_length="100"; 
+            rssfeed_item_title_length="150"; 
             rssfeed_item_title_color="#d0d0d0"; 
             rssfeed_item_bgcolor=""; 
             rssfeed_item_bgimage=""; 
@@ -275,7 +285,7 @@
             rssfeed_item_source_icon="on"; 
             rssfeed_item_date="on"; 
             rssfeed_item_description="on"; 
-            rssfeed_item_description_length="150"; 
+            rssfeed_item_description_length="250"; 
             rssfeed_item_description_color="#eee"; 
             rssfeed_item_description_link_color="#d0d0d0"; 
             rssfeed_item_description_tag="off"; 
@@ -285,7 +295,7 @@
         </script> 
         <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
         <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-        <div style="font-size:.8em; text-align:right;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></div> 
+        <div style="text-align:right;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></div> 
         <!-- end sw-rss-feed code -->
     </div>
     
