--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,73 +41,6 @@ a {
   text-decoration: none;
 }
 
-.content {
-  padding: 0 32px;
-}
-
-.grid-container {
-  display: grid; 
-  height: 100%;
-}
-
-.grid-item {
-  text-align: left;
-  padding: 1em;
-}
-
-.grid-item:nth-child(1),
-.grid-item:nth-child(3),
-.grid-item:nth-child(5),
-.grid-item:nth-child(7) { background: #393e47; }
-
-.grid-column-1,
-.grid-column-2,
-.grid-column-3,
-.grid-column-4 {
-  grid-area: auto / span 1;
-}
-
-@media only screen and (min-width: 500px) and (max-width: 799px) {
-  .grid-container {
-    grid-template-columns: auto auto;
-  }
-  .grid-column-1,
-  .grid-column-2 {
-    grid-area: auto / span 1;
-  }
-  .grid-column-3,
-  .grid-column-4 {
-    grid-area: auto / span 2;
-  }
-  .grid-item:nth-child(1),
-  .grid-item:nth-child(4),
-  .grid-item:nth-child(5) { 
-    background: #393e47; 
-  }
-
-}
-
-@media only screen and (min-width: 800px) {
-  .grid-container {
-    grid-template-columns: auto auto auto;
-  }
-  .grid-column-1 {
-    grid-area: auto / span 1;
-  }
-  .grid-column-2 {
-    grid-area: auto / span 2;
-  }
-  .grid-column-3,
-  .grid-column-4 {
-    grid-area: auto / span 3;
-  }
-  .grid-item:nth-child(1),
-  .grid-item:nth-child(4),
-  .grid-item:nth-child(5) { 
-    background: #393e47; 
-  }
-}
-
 ul {
   padding: 0;
 }
@@ -115,7 +48,6 @@ ul {
 li {
   list-style-type: none;
   margin: .5em 0;
-  font-size: .9em;
 }
 
 h3 {
@@ -155,6 +87,75 @@ li .fab {
 }
 
 .feed-container {
-  font-size: 1em !important;
   line-height: 1.3 !important;
 }
+
+.content {
+  padding: 0 32px;
+}
+
+.grid-container {
+  display: grid; 
+  height: 100%;
+}
+
+.grid-item {
+  text-align: left;
+  padding: 1em;
+}
+
+.grid-item:nth-child(2),
+.grid-item:nth-child(4),
+.grid-item:nth-child(6),
+.grid-item:nth-child(8) { background: #393e47; }
+
+.grid-column-1,
+.grid-column-2,
+.grid-column-3,
+.grid-column-4 {
+  grid-area: auto / span 1;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 799px) {
+  .grid-container {
+    grid-template-columns: auto auto;
+  }
+  .grid-column-1,
+  .grid-column-2 {
+    grid-area: auto / span 1;
+  }
+  .grid-column-3,
+  .grid-column-4 {
+    grid-area: auto / span 2;
+  }
+  .grid-item {background: none;}
+  .grid-item:nth-child(2),
+  .grid-item:nth-child(5),
+  .grid-item:nth-child(6) { 
+    background: #393e47; 
+  }
+
+}
+
+@media only screen and (min-width: 800px) {
+  .grid-container {
+    grid-template-columns: auto auto auto;
+  }
+  .grid-column-1 {
+    grid-area: auto / span 1;
+  }
+  .grid-column-2 {
+    grid-area: auto / span 2;
+  }
+  .grid-column-3,
+  .grid-column-4 {
+    grid-area: auto / span 3;
+  }
+  .grid-item {background: none;}
+  .grid-item:nth-child(2),
+  .grid-item:nth-child(5),
+  .grid-item:nth-child(6) { 
+    background: #393e47; 
+  }
+}
+
