--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -249,63 +249,9 @@
 
     <div class="grid-item grid-column-4">
 
-        <h3><i class="fad fa-rss fa-fw"></i> The Feed</h3>
+        <h3><i class="fad fa-rss fa-fw"></i> The Feeds</h3>
     
-        <!-- start sw-rss-feed code --> 
-        <script type="text/javascript"> 
-            <!-- 
-            rssfeed_url = new Array(); 
-            rssfeed_url[0]='https://www.democracynow.org/democracynow.rss';  
-            rssfeed_url[1]='http://feeds.propublica.org/propublica/main';  
-            rssfeed_url[2]='https://theanarchistlibrary.org/feed';
-            rssfeed_frame_width="100%"; 
-            rssfeed_frame_height="1280"; 
-            rssfeed_scroll="off"; 
-            rssfeed_scroll_step="6"; 
-            rssfeed_scroll_bar="on"; 
-            rssfeed_target="_blank"; 
-            rssfeed_font_size="1em"; 
-            rssfeed_font_face="-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif"; 
-            rssfeed_border="off"; 
-            rssfeed_title="off"; 
-            rssfeed_title_name=''; 
-            rssfeed_title_bgcolor=""; 
-            rssfeed_title_color="#ffc107"; 
-            rssfeed_title_bgimage=""; 
-            rssfeed_footer="off"; 
-            rssfeed_footer_name="rss feed"; 
-            rssfeed_footer_bgcolor="#fff"; 
-            rssfeed_footer_color="#333"; 
-            rssfeed_footer_bgimage=""; 
-            rssfeed_item_title_length="150"; 
-            rssfeed_item_title_color="#d0d0d0"; 
-            rssfeed_item_bgcolor=""; 
-            rssfeed_item_bgimage=""; 
-            rssfeed_item_border_bottom="off"; 
-            rssfeed_item_source_icon="on"; 
-            rssfeed_item_date="on"; 
-            rssfeed_item_description="on"; 
-            rssfeed_item_description_length="250"; 
-            rssfeed_item_description_color="#eee"; 
-            rssfeed_item_description_link_color="#d0d0d0"; 
-            rssfeed_item_description_tag="off"; 
-            rssfeed_no_items="0"; 
-            rssfeed_cache = "21874b1ce98e2dedad9218052e9b4748"; 
-            //--> 
-        </script> 
-        <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
-        <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-        <div style="text-align:right;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></div> 
-        <!-- end sw-rss-feed code -->
-        <script type="text/javascript">
-            $('.feed-container').css({
-                'line-height':'1.3',
-                'font-size':'calc(10px + 1vmin)'
-            })
-            $('.feed-container a[href^="http://www.democracynow.org/"]').prepend('🗽 DN!: ').css('color','#f44336');
-            $('.feed-container a[href^="http://feeds.propublica.org/"]').prepend('🔍 PP: ').css('color','#00bcd4');
-            $('.feed-container a[href^="https://theanarchistlibrary.org/"]').prepend('✊🏽 AL: ').css('color','#8bc34a');
-        </script>
+        <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.democracynow.org%2Fdemocracynow.rss&limit=10&showicon=true&type=js"></script>
     </div>
     
 </div>
