--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -250,10 +250,26 @@
     <div class="grid-item grid-column-4">
 
         <h3><i class="fad fa-rss fa-fw"></i> The Feeds</h3>
-    
-        <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.democracynow.org%2Fdemocracynow.rss&limit=10&showicon=true&type=js"></script>
+           
     </div>
     
+    <div class="grid-item grid-column-2">
+
+        <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.democracynow.org%2Fdemocracynow.rss&limit=10&showicon=true&type=js"></script>
+        
+    </div>
+    
+    <div class="grid-item grid-column-2">
+
+        <script src="//rss.bloople.net/?url=https%3A%2F%2Ffeeds.propublica.org%2Fpropublica%2Fmain&limit=10&showicon=true&type=js"></script>
+        
+    </div>
+
+    <div class="grid-item grid-column-2">
+
+        <script src="//rss.bloople.net/?url=https%3A%2F%2Ftheanarchistlibrary.org%2Ffeed&limit=10&showicon=true&type=js"></script>
+        
+    </div>
 </div>
 
 {{ end }}
