--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -261,13 +261,13 @@
     
     <div class="grid-item grid-column-2">
 
-        <script src="//rss.bloople.net/?url=https%3A%2F%2Ffeeds.propublica.org%2Fpropublica%2Fmain&limit=10&showicon=true&type=js"></script>
+        <script src="//rss.bloople.net/?url=http%3A%2F%2Ffeeds.propublica.org%2Fpropublica%2Fmain&detail=300&limit=10&showicon=true&type=js"></script>
         
     </div>
 
     <div class="grid-item grid-column-2">
 
-        <script src="//rss.bloople.net/?url=https%3A%2F%2Ftheanarchistlibrary.org%2Ffeed&limit=10&showicon=true&type=js"></script>
+        <script src="//rss.bloople.net/?url=https%3A%2F%2Ftheanarchistlibrary.org%2Ffeed&detail=300&limit=10&showicon=true&type=js"></script>
         
     </div>
 </div>
