--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,11 +6,11 @@
 
         <h1>
             <span class="fa-layers fa-fw">
-                <i class="fad fa-star-exclamation" data-fa-transform="rotate--10 shrink-4 up-10 right-10"></i>
-                <i class="fad fa-lightbulb-exclamation" data-fa-transform="rotate--350 shrink-6 up-6 left-8"></i>
-                <i class="fad fa-exclamation" data-fa-transform="grow-4 up-6 left-2"></i>
-                <i class="fad fa-question" data-fa-transform="shrink-8 up-6 right-2"></i>
-                <i class="fad fa-bell-exclamation" data-fa-transform="shrink-2 up-8 left-4"></i>
+                <i class="fad fa-star-exclamation" data-fa-transform="rotate--10 shrink-8 up-14 left-14"></i>
+                <i class="fad fa-lightbulb-exclamation" data-fa-transform="rotate--350 shrink-6 up-10 right-8"></i>
+                <i class="fad fa-exclamation" data-fa-transform="rotate--5 shrink-6 up-6 left-2"></i>
+                <i class="fad fa-question" data-fa-transform="rotate--355 shrink-6 up-6 right-2"></i>
+                <i class="fad fa-bell-exclamation" data-fa-transform="shrink-2 up-4 right-14"></i>
                 <i class="fad fa-surprise fa-lg"></i>
             </span><br>
             Pop That News Bubble
@@ -255,7 +255,13 @@
     
     <div class="grid-item grid-column-2">
 
-        <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.democracynow.org%2Fdemocracynow.rss&limit=10&showicon=true&type=js"></script>
+        <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.democracynow.org%2Fdemocracynow.rss&detail=300&limit=10&showicon=true&type=js"></script>
+        
+    </div>
+
+    <div class="grid-item grid-column-2">
+
+        <script src="//rss.bloople.net/?url=http%3A%2F%2Ffeeds.propublica.org%2Fpropublica%2Fmain&detail=300&limit=10&showicon=true&type=js"></script>
         
     </div>
     
