--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,11 +6,12 @@
 
         <h1>
             <span class="fa-layers fa-fw">
-                <i class="fad fa-star-exclamation" data-fa-transform="rotate--10 shrink-8 up-14 left-14"></i>
-                <i class="fad fa-lightbulb-exclamation" data-fa-transform="rotate--350 shrink-6 up-10 right-8"></i>
-                <i class="fad fa-exclamation" data-fa-transform="rotate--5 shrink-6 up-6 left-2"></i>
-                <i class="fad fa-question" data-fa-transform="rotate--355 shrink-6 up-6 right-2"></i>
-                <i class="fad fa-bell-exclamation" data-fa-transform="shrink-2 up-4 right-14"></i>
+                <i class="fad fa-star-exclamation" data-fa-transform="rotate--30 shrink-6 up-12 left-12"></i>
+                <i class="fad fa-lightbulb-exclamation" data-fa-transform="rotate--340 shrink-7 up-15 right-8"></i>
+                <i class="fad fa-exclamation" data-fa-transform="rotate--10 shrink-9 up-14 left-4"></i>
+                <i class="fad fa-question" data-fa-transform="shrink-8 up-15"></i>
+                <i class="fad fa-bell-exclamation" data-fa-transform="rotate--325 shrink-6 up-9 right-15"></i>
+                <i class="fad fa-bahai fa-3x"></i>
                 <i class="fad fa-surprise fa-lg"></i>
             </span><br>
             Pop That News Bubble
