--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,14 +4,14 @@
 
     <div class="grid-item grid-column-4 no-bg">
 
-        <h1>
+        <h1 class="main-heading">
             <span class="fa-layers fa-fw">
+                <i class="fad fa-bahai" data-fa-transform="grow-8"></i>
                 <i class="fad fa-star-exclamation" data-fa-transform="rotate--30 shrink-6 up-12 left-12"></i>
                 <i class="fad fa-lightbulb-exclamation" data-fa-transform="rotate--340 shrink-7 up-15 right-8"></i>
                 <i class="fad fa-exclamation" data-fa-transform="rotate--10 shrink-9 up-14 left-4"></i>
                 <i class="fad fa-question" data-fa-transform="shrink-8 up-15"></i>
                 <i class="fad fa-bell-exclamation" data-fa-transform="rotate--325 shrink-6 up-9 right-15"></i>
-                <i class="fad fa-bahai fa-3x"></i>
                 <i class="fad fa-surprise fa-lg"></i>
             </span><br>
             Pop That News Bubble
