--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,21 @@ body {
   color: white;
 }
 
+.main-heading .fa-layers .fa-star-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-star-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
+.main-heading .fa-layers .fa-lightbulb-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-lightbulb-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
+.main-heading .fa-layers .fa-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
+.main-heading .fa-layers .fa-question .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-question .fa-secondary { color: #3f51b5; opacity: 1;}
+.main-heading .fa-layers .fa-bell-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-bell-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
+.main-heading .fa-layers .fa-bahai .fa-primary {}
+.main-heading .fa-layers .fa-bahai .fa-secondary {}
+.main-heading .fa-layers .fa-surprise .fa-primary {}
+.main-heading .fa-layers .fa-surprise .fa-secondary {}
+
 h1 {
   font-family: 'Josefin Sans', sans-serif;
   color: #f44336;
@@ -56,6 +71,7 @@ h3 {
   font-family: 'Josefin Sans', sans-serif;
   color: #ffc107;
   font-weight: 400;
+  line-height: 1.2;
 }
 h3 a { color: #ffc107; }
 
@@ -119,7 +135,7 @@ li .fab {
 
 @media only screen and (min-width: 500px) and (max-width: 799px) {
   .grid-container {
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
   }
   .grid-column-1,
   .grid-column-2 {
@@ -140,7 +156,7 @@ li .fab {
 
 @media only screen and (min-width: 800px) {
   .grid-container {
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 33.33% 33.33% 33.33%;
   }
   .grid-column-1 {
     grid-area: auto / span 1;
@@ -162,7 +178,7 @@ li .fab {
 
 @media only screen and (min-width: 1280px) {
   .grid-container {
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 25% 25% 25% 25%;
   }
   .grid-column-1 {
     grid-area: auto / span 1;
@@ -196,11 +212,11 @@ li .fab {
   display: block;
 }
 .feed-item-title { 
-  margin-top: 1em; 
+  margin-top: 1.4em; 
   margin-bottom: .2em; 
 }
 .feed-item-title a { color: #cddc39; }
 .feed-item-desc { 
-  margin: 0; 
+  margin: 1em 0; 
   line-height: 1.4;
 }
