--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,20 +21,20 @@ body {
   color: white;
 }
 
-.main-heading .fa-layers .fa-star-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-star-exclamation .fa-primary { color: #ffeb3b;  opacity: 1;}
 .main-heading .fa-layers .fa-star-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
-.main-heading .fa-layers .fa-lightbulb-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-lightbulb-exclamation .fa-primary { color: #ffeb3b;  opacity: 1;}
 .main-heading .fa-layers .fa-lightbulb-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
-.main-heading .fa-layers .fa-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-exclamation .fa-primary { color: #ffeb3b;  opacity: 1;}
 .main-heading .fa-layers .fa-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
-.main-heading .fa-layers .fa-question .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-question .fa-primary { color: #ffeb3b;  opacity: 1;}
 .main-heading .fa-layers .fa-question .fa-secondary { color: #3f51b5; opacity: 1;}
-.main-heading .fa-layers .fa-bell-exclamation .fa-primary { color: #ffeb3b; }
+.main-heading .fa-layers .fa-bell-exclamation .fa-primary { color: #ffeb3b;  opacity: 1;}
 .main-heading .fa-layers .fa-bell-exclamation .fa-secondary { color: #3f51b5; opacity: 1;}
-.main-heading .fa-layers .fa-bahai .fa-primary {}
-.main-heading .fa-layers .fa-bahai .fa-secondary {}
-.main-heading .fa-layers .fa-surprise .fa-primary {}
-.main-heading .fa-layers .fa-surprise .fa-secondary {}
+.main-heading .fa-layers .fa-bahai .fa-primary { color: #8bc34a; opacity: .5; }
+.main-heading .fa-layers .fa-bahai .fa-secondary { color: #673ab7; }
+.main-heading .fa-layers .fa-surprise .fa-primary { color: #2196f3; opacity: 1; }
+.main-heading .fa-layers .fa-surprise .fa-secondary { color: #ffc107; opacity: 1;}
 
 h1 {
   font-family: 'Josefin Sans', sans-serif;
@@ -114,6 +114,7 @@ li .fab {
   display: grid; 
   height: 100%;
   max-width: 1440px;
+  grid-template-columns: 100%;
 }
 
 .grid-item {
@@ -129,7 +130,8 @@ li .fab {
 .grid-column-1,
 .grid-column-2,
 .grid-column-3,
-.grid-column-4 {
+.grid-column-4,
+.grid-column-feed {
   grid-area: auto / span 1;
 }
 
@@ -142,7 +144,8 @@ li .fab {
     grid-area: auto / span 1;
   }
   .grid-column-3,
-  .grid-column-4 {
+  .grid-column-4,
+  .grid-column-feed {
     grid-area: auto / span 2;
   }
   .grid-item {background: none !important;}
@@ -165,7 +168,8 @@ li .fab {
     grid-area: auto / span 2;
   }
   .grid-column-3,
-  .grid-column-4 {
+  .grid-column-4,
+  .grid-column-feed {
     grid-area: auto / span 3;
   }
   .grid-item {background: none !important;}
@@ -183,7 +187,8 @@ li .fab {
   .grid-column-1 {
     grid-area: auto / span 1;
   }
-  .grid-column-2 {
+  .grid-column-2,
+  .grid-column-feed {
     grid-area: auto / span 2;
   }
   .grid-column-3 {
@@ -207,7 +212,7 @@ li .fab {
 .feed-title-image {
   margin: .4em auto;
   border-radius: 4px;
-  height: 100px;
+  height: auto;
   width: auto;
   display: block;
 }
