--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -98,7 +98,7 @@
         <ul>
             <li>
                 <i class="fad fa-laptop-medical fa-sm fa-fw"></i>
-                <a href="https://pubmed.ncbi.nlm.nih.gov/?term=covid">
+                <a href="https://pubmed.ncbi.nlm.nih.gov/?term=covid&sort=date">
                     PubMed "COVID"
                 </a>
             </li>
@@ -116,7 +116,7 @@
             </li>
             <li>
                 <i class="fad fa-hospital-user fa-sm fa-fw"></i>
-                <a href="https://www.youtube.com/channel/UCFaPzuoXcACu7jplePDfXmA">
+                <a href="https://www.youtube.com/user/ifr48/videos?view=0&sort=dd&shelf_id=0">
                     IHU Marseille Youtube
                 </a>
             </li>
