--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -18,7 +18,7 @@
 
     </div>
 
-    <div class="grid-item grid-column-1">
+    <div class="grid-item grid-column-2">
 
         <h3><i class="fad fa-newspaper fa-fw"></i> The Powerhouses</h3>
 
@@ -90,7 +90,7 @@
         
     </div>
 
-    <div class="grid-item grid-column-1">
+    <div class="grid-item grid-column-2">
 
         <h3><i class="fad fa-viruses fa-fw"></i> The SARS-CoV-2</h3>
 
@@ -174,7 +174,7 @@
 
     </div>
 
-    <div class="grid-item grid-column-1">
+    <div class="grid-item grid-column-2">
 
         <h3><i class="fad fa-grin-squint-tears fa-fw"></i> The Ridiculousness</h3>
 
@@ -255,7 +255,7 @@
     
     <div class="grid-item grid-column-feed">
 
-        <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.democracynow.org%2Fdemocracynow.rss&detail=200&limit=10&showicon=true&type=js"></script>
+        <script src="https://www.democracynow.org/democracynow.rss"></script>
         
     </div>
 
