--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -108,12 +108,6 @@
                 </a>
             </li>
             <li>
-                <i class="fad fa-book-medical fa-sm fa-fw"></i>
-                <a href="https://www.cochranelibrary.com/covid-19">
-                    Cochrane Library
-                </a>
-            </li>
-            <li>
                 <i class="fad fa-hospital-user fa-sm fa-fw"></i>
                 <a href="https://www.youtube.com/user/ifr48/videos?view=0&sort=dd&shelf_id=0">
                     IHU Marseille Youtube
@@ -123,6 +117,54 @@
                 <i class="fad fa-syringe fa-sm fa-fw"></i>
                 <a href="https://thevaccinereaction.org/vaccination/">
                     The Vaccine Reaction
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-book-medical fa-sm fa-fw"></i>
+                <a href="https://www.cochranelibrary.com/covid-19">
+                    Cochrane Library
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-link fa-sm fa-fw"></i>
+                <a href="https://drive.google.com/drive/folders/1efQVBclGxwnCCYVLbzH96A0QRSWwmTYI">
+                    Colorado Data Files
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-link fa-sm fa-fw"></i>
+                <a href="https://c19early.com/">
+                    COVID-19 early treatment: real-time analysis of 718 studies
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-link fa-sm fa-fw"></i>
+                <a href="https://www.mdpi.com/2076-393X/9/7/693/htm">
+                    The Safety of COVID-19 Vaccinations—We Should Rethink the Policy
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-link fa-sm fa-fw"></i>
+                <a href="https://blogs.bmj.com/bmj/2021/06/08/why-we-petitioned-the-fda-to-refrain-from-fully-approving-any-covid-19-vaccine-this-year/">
+                    Why we petitioned the FDA to refrain from fully approving any covid-19 vaccine this year
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-link fa-sm fa-fw"></i>
+                <a href="https://www.bmj.com/content/373/bmj.n1244">
+                    Published 18 May 2021 > Covid-19 vaccines: In the rush for regulatory approval, do we need more data?
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-link fa-sm fa-fw"></i>
+                <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)31180-6/fulltext">
+                    RETRACTED: Hydroxychloroquine or chloroquine with or without a macrolide for treatment of COVID-19: a multinational registry analysis
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-link fa-sm fa-fw"></i>
+                <a href="https://blogs.bmj.com/bmj/2021/01/04/peter-doshi-pfizer-and-modernas-95-effective-vaccines-we-need-more-details-and-the-raw-data/">
+                    Peter Doshi: Pfizer and Moderna’s “95% effective” vaccines—we need more details and the raw data
                 </a>
             </li>
         </ul>
